# leanforge

./: .env.example  .gitignore  CLAUDE.md  EVALS  IMPROVEMENTS.txt  LICENSE  LLM.spec.txt  PROJECT_LOG.txt  README.md  README.txt  REFINE.spec.txt  RUN_COMMANDS.txt  leanforge.py  pyproject.toml  smoke_test.py
examples/: sample_output.json
examples/scratch/: lake-manifest.json  lakefile.lean
examples/scratch/Scratch/: Basic.lean  Challenge.lean  Group.lean
llm/: LOCAL_MODELS.txt  SPIKES.md  __init__.py  ask.py  ask_llm.py  cache.py  env.py  errors.py  models.py  response.py  smoke_anthropic.py
llm/evals/: curls.txt
llm/providers/: __init__.py  anthropic.py  google.py
llm/tests/: test_ask.py  test_response.py  test_submit_fix.py  test_tools.py
llm/tests/providers/: test_anthropic.py  test_google.py
llm/tools/: __init__.py  judge_goal.py  submit_fix.py
refine/: __main__.py  artifact_store.py  controller.py  coords.py  cost.py  diff_summary.py  edits.py  env.py  evaluator.py  fingerprint.py  goal_status.py  outcome.py  pause.py  prompt_builder.py  schema.py  signature.py  state.py
refine/checkers/: __init__.py  base.py  lean_compile.py  llm_judge.py  no_sorry.py  pattern_absent.py  runner.py  signature_preservation.py
refine/tests/: test_artifact_store.py  test_controller.py  test_coords.py  test_coords_extensions.py  test_cost.py  test_diff_summary.py  test_edits.py  test_env.py  test_evaluator.py  test_fingerprint.py  test_goal_status.py  test_outcome.py  test_pause.py  test_prompt_builder.py  test_schema.py  test_signature.py  test_smoke.py  test_state.py
refine/tests/checkers/: test_base.py  test_cli_specs.py  test_lean_compile.py  test_llm_judge.py  test_no_sorry.py  test_pattern_absent.py  test_runner.py  test_signature_preservation.py
