[project]
name = "leanforge"
version = "0.1.0"
description = "Lean 4 diagnostics + LLM-driven repair loop"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["refine/tests", "llm/tests"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
# leanforge/refine/ uses PEP 420 namespace packages (no __init__.py per B-4
# of the code standard). explicit_package_bases tells mypy to treat the
# project root as the base, which resolves refine.* unambiguously.
explicit_package_bases = true
mypy_path = "."
