[project]
name = "leanforge"
version = "0.1.0"
description = "Lean 4 diagnostics + LLM-driven repair loop"
requires-python = ">=3.12"

# PEP 735 dependency groups (supported by uv ≥ 0.4.27).
# Use them via `uv run --group <name> --python 3.12 -- <command>` so
# RUN_COMMANDS.txt doesn't need to enumerate every --with X flag.
# Groups never become installed dependencies of the project; they're
# pure tooling buckets.
[dependency-groups]
runtime = [
    "anthropic",
    "google-genai",
    "python-dotenv",
    "leanclient",
    "pydantic",
]
test = [
    {include-group = "runtime"},
    "pytest",
    "pytest-cov",
]
lint = [
    "ruff",
]
typecheck = [
    {include-group = "runtime"},
    "mypy",
]

[tool.pytest.ini_options]
testpaths = ["refine/tests", "llm/tests"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]

# The standalone diagnostic CLI and quick smoke test predate the
# 88-col rule; their long lines are in example invocations and docstring
# code blocks where wrapping would hurt readability. Carve them out
# rather than chase wraps that aren't relevant to the new code.
[tool.ruff.lint.per-file-ignores]
"leanforge.py" = ["E501"]
"smoke_test.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
# leanforge/refine/ uses PEP 420 namespace packages (no __init__.py per B-4
# of the code standard). explicit_package_bases tells mypy to treat the
# project root as the base, which resolves refine.* unambiguously.
explicit_package_bases = true
mypy_path = "."
# Tests rely heavily on pytest fixtures (which look "untyped" to mypy in
# strict mode) and lean on Any-shaped dict literals for fixture data.
# Production source (refine/, llm/ non-test modules) stays under --strict;
# tests get the looser convention conventional for test code.
exclude = "(refine|llm)/tests/.*"
